--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -1,3 +1,10 @@
-$flag_red: #9d2235;
+:root {
+  --latvian-flag-color: #9d2235;
+  --body-padding: 12vw;
+  --font-stack-sans-serif: "Segoe UI",sans-serif;
+  --font-stack: var(--font-stack-sans-serif);
+  --font-size: 1.4vw;
+}
+
 //f8f8f8 possible background color
 //333 text color?
