--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,5 +1,10 @@
 <nav>
   {% for item in site.data.navigation %}
-    <a href="{{ item.link }}" {% if page.url == item.link %}class="current"{% endif %}>{{ item.name }}</a>
+    <a href="{{ item.link }}"
+       {% if page.url == item.link or page.layout == item.layout %}
+        class="current"
+       {% endif %}>
+      {{ item.name }}
+    </a>
   {% endfor %}
 </nav>
