--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -1,10 +1,11 @@
 :root {
   --latvian-flag-color: #9d2235;
   --body-padding: 12vw;
+  --header-padding: 10vh;
   --font-stack-sans-serif: "Segoe UI",sans-serif;
   --font-stack: var(--font-stack-sans-serif);
   --font-size: 1.4vw;
+  --background-color: #f3f3f3;
 }
 
-//f8f8f8 possible background color
 //333 text color?
