--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,7 +1,9 @@
 ---
 layout: default
 ---
-<h1>{{ page.title }}</h1>
-<p>{{ page.date | date_to_string }} - {{ page.author }}</p>
+<article>
+    {% include header.html content=page.title %}
+    <p>{{ page.date | date_to_string }} - {{ page.author }}</p>
 
-{{ content }}
+    {{ content }}
+</article>
