--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,8 @@
   </head>
   <body>
     {% include navigation.html %}
-    {{ content }}
+    <article>
+      {{ content }}
+    </article>
   </body>
 </html>
