--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -1,7 +1,9 @@
 :root {
-  --latvian-flag-color: #9d2235;
+  //--latvian-flag-color: #9d2235;
+  --latvian-flag-color: #77353d;
   --body-padding: 12vw;
   --header-padding: 10vh;
+  --nav-padding: 1vh;
   --font-stack-sans-serif: "Segoe UI",sans-serif;
   --font-stack: var(--font-stack-sans-serif);
   --font-size: 1.4vw;
