--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -4,9 +4,12 @@
   --body-padding: 12vw;
   --header-padding: 10vh;
   --nav-padding: 1vh;
+  --blockquote-padding: 3vh;
+  --blockquote-border-offset: 2vh;
   --font-stack-sans-serif: "Segoe UI",sans-serif;
   --font-stack: var(--font-stack-sans-serif);
   --font-size: 1.4vw;
+  --border-width: 0.5vh;
   --background-color: #f3f3f3;
 }
 
