--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -24,11 +24,35 @@ body {
   font-size: calc(var(--font-size) * 2);
 }
 
+article a {
+  font-weight: bold;
+}
+
+article blockquote {
+  margin-bottom: var(--blockquote-padding);
+  margin-left: calc(var(--blockquote-border-offset) * -1 - var(--border-width));
+  padding-left: var(--blockquote-border-offset);
+  border-left-style: solid;
+  border-width: var(--border-width);
+}
+
+article a:hover {
+  text-decoration: underline;
+}
+
 nav {
   font-weight: 700;
   font-size: 200%;
 }
 
+dt {
+  font-size: 70%;
+  font-style: italic;
+}
+
+dd {
+  padding-left: 1em;
+}
 
 header {
   padding-top: calc(var(--header-padding) * .6);
@@ -50,7 +74,7 @@ header h1 {
   margin-left: inherit;
 }
 
-a:hover {
+nav a:hover {
   color: var(--latvian-flag-color)
 }
 
