--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,11 +6,15 @@
     <title>{{ page.title }}</title>
     <link rel="stylesheet" href="/assets/css/styles.css">
     <link rel="shortcut icon" type="image/png" href="/favicon.png">
+    {% if page.syntax_highlighting %}
+    <link rel="stylesheet" href="/assets/css/syntax_highlighting.css">
+    {% endif %}
   </head>
   <body>
     {% include navigation.html %}
     <article>
       {{ content }}
     </article>
+    {% include footer.html %}
   </body>
 </html>
