--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -6,6 +6,8 @@
   --nav-padding: 1vh;
   --blockquote-padding: 3vh;
   --blockquote-border-offset: 2vh;
+  --bottom-padding: 12vh;
+  --code-block-margin: 5vh;
   --font-stack-sans-serif: "Segoe UI",sans-serif;
   --font-stack: var(--font-stack-sans-serif);
   --font-size: 1.4vw;
