simplified css rules

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -89,10 +89,7 @@ code.language-plaintext {
 }
 
 header {
-  padding-top: calc(var(--header-padding) * .6);
-  padding-bottom: calc(var(--header-padding) * .6);
-  padding-right: calc(var(--body-padding) * 1);
-  padding-left: calc(var(--body-padding) * 1);
+  padding: calc(var(--header-padding) * .6) calc(var(--body-padding) * 1);
   margin-right: calc(var(--body-padding) * -1);
   margin-left: calc(var(--body-padding) * -1);
 }
@@ -100,10 +97,7 @@ header {
 header h1 {
   background-color: var(--latvian-flag-color);
   color: var(--background-color);
-  padding-top: calc(var(--header-padding) * .4);
-  padding-bottom: calc(var(--header-padding) * .4);
-  padding-right: inherit;
-  padding-left: inherit;
+  padding: calc(var(--header-padding) * .4) inherit;
   margin-right: inherit;
   margin-left: inherit;
 }
@@ -114,10 +108,7 @@ nav a:hover {
 
 nav {
   background-color: var(--background-color);
-  padding-top: var(--nav-padding);
-  padding-bottom: var(--nav-padding);
-  padding-right: calc(var(--body-padding) * 1);
-  padding-left: calc(var(--body-padding) * 1);
+  padding: var(--nav-padding) calc(var(--body-padding) * 1);
   margin-right: calc(var(--body-padding) * -1);
   margin-left: calc(var(--body-padding) * -1);
 }
