--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -89,7 +89,10 @@ code.language-plaintext {
 }
 
 header {
-  padding: calc(var(--header-padding) * .6) calc(var(--body-padding) * 1);
+  padding-top: calc(var(--header-padding) * .6);
+  padding-bottom: calc(var(--header-padding) * .6);
+  padding-right: calc(var(--body-padding) * 1);
+  padding-left: calc(var(--body-padding) * 1);
   margin-right: calc(var(--body-padding) * -1);
   margin-left: calc(var(--body-padding) * -1);
 }
@@ -97,7 +100,10 @@ header {
 header h1 {
   background-color: var(--latvian-flag-color);
   color: var(--background-color);
-  padding: calc(var(--header-padding) * .4) inherit;
+  padding-top: calc(var(--header-padding) * .4);
+  padding-bottom: calc(var(--header-padding) * .4);
+  padding-right: inherit;
+  padding-left: inherit;
   margin-right: inherit;
   margin-left: inherit;
 }
@@ -108,7 +114,10 @@ nav a:hover {
 
 nav {
   background-color: var(--background-color);
-  padding: var(--nav-padding) calc(var(--body-padding) * 1);
+  padding-top: var(--nav-padding);
+  padding-bottom: var(--nav-padding);
+  padding-right: calc(var(--body-padding) * 1);
+  padding-left: calc(var(--body-padding) * 1);
   margin-right: calc(var(--body-padding) * -1);
   margin-left: calc(var(--body-padding) * -1);
 }
