all hyperlinks are now underlined

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -50,11 +50,7 @@ footer {
   padding-bottom: var(--bottom-padding);
 }
 
-article a:hover {
-  text-decoration: underline;
-}
-
-footer a:hover {
+a:hover {
   text-decoration: underline;
 }
 
