--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:type"               content="article" />
+    <meta property="og:title"              content="{{ page.title }}" />
+    <meta property="og:description"        content="{{ page.quote }}" />
+    <meta name="theme-color" content="#77353d">
+    <meta property="og:image" content="/favicon.png" />
     <title>{{ page.title }}</title>
     <link rel="stylesheet" href="/assets/css/styles.css">
     <link rel="shortcut icon" type="image/png" href="/favicon.png">
