--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -1,6 +1,6 @@
 :root {
-  //--latvian-flag-color: #9d2235;
-  --latvian-flag-color: #77353d;
+  //--latvian-flag-color: #77353d;
+  --blog-color: purple;
   --body-padding: 12vw;
   --header-padding: 10vh;
   --nav-padding: 1vh;
@@ -10,7 +10,7 @@
   --code-block-margin: 5vh;
   --font-stack-sans-serif: "Segoe UI",sans-serif;
   --font-stack: var(--font-stack-sans-serif);
-  --font-size: 1.4vw;
+  --font-size: 18px;
   --border-width: 0.5vh;
   --background-color: #f3f3f3;
 }
