--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -14,7 +14,7 @@ html {
 }
 
 .current {
-  color: var(--latvian-flag-color);
+  color: var(--blog-color);
 }
 
 body {
@@ -106,7 +106,7 @@ header {
 }
 
 header h1 {
-  background-color: var(--latvian-flag-color);
+  background-color: var(--blog-color);
   color: var(--background-color);
   padding-top: calc(var(--header-padding) * .4);
   padding-bottom: calc(var(--header-padding) * .4);
@@ -117,7 +117,7 @@ header h1 {
 }
 
 nav a:hover {
-  color: var(--latvian-flag-color)
+  color: var(--blog-color)
 }
 
 nav {
